# rs-server

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/: copilot-instructions.md
.github/workflows/: sonar.yml
migrations/: V0__Create_Application_Role.sql
src/: main.rs
src/app/: error.rs  mod.rs  router.rs  state.rs
src/app/middleware/: auth.rs  metrics.rs  mod.rs  tracing.rs
src/auth/: handler.rs  mod.rs  model.rs  queries.rs  repo.rs  service.rs  traits.rs
src/auth/dto/: mod.rs  request.rs
src/auth/dto/tests/: mod.rs  request_tests.rs
src/auth/jwt/: claims.rs  mod.rs  queries.rs  service.rs  traits.rs
src/config/: circuit_breaker.rs  jwt.rs  mod.rs  origin.rs  postgres.rs  redis.rs
src/utils/: cookie.rs  health.rs  mod.rs  validation.rs
src/utils/postgres/: base.rs  metrics.rs  mod.rs  prepared_cache.rs  query_builder.rs
src/utils/redis/: base.rs  metrics.rs  mod.rs
src/utils/tests/: cookie_tests.rs  mod.rs  validation_tests.rs
