[package]
name = "rs-passkey-auth"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
webauthn-rs = { version = "0.5.2", features = [
    "danger-allow-state-serialisation",
] }
url = "2.5.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
base64 = "0.22.1"
axum-extra = { version = "0.12.5", features = ["cookie"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
ed25519-dalek = "2.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
prometheus = "0.14.0"
axum-prometheus = "0.9.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
time = { version = "0.3.44", features = ["macros"] }
failsafe = "1.3.0"
